--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 		<title>Flying Cube Game</title>
 
 		<style>
@@ -13,8 +14,9 @@
 				height: 100%;
 				margin: 0;
 				padding: 0;
+				background-image: url("img/use-svg-as-background-image-particle-strokes.svg");
 			}
-
+			
 			#renderCanvas {
 				width: 100%;
 				height: 100%;
